--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,6 +23,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   box-sizing: border-box;
+  color: #353535;
   background-color: #eaeaef;
 }
 
