1) Modal basic styling is added, 2)ContactItem: modal window open/close logic is added

--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -8,6 +8,13 @@
   border-radius: 12px;
 }
 
+.buttons {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+
 .button {
   display: block;
   width: 90px;
