--- a/src/components/ContactItemUpdate/ContactItemUpdate.module.css
+++ b/src/components/ContactItemUpdate/ContactItemUpdate.module.css
@@ -26,7 +26,7 @@
 .button {
   display: block;
   margin: 10px auto;
-  padding: 10px 20px;
+  padding: 10px;
   width: 170px;
   font-size: 16px;
   font-weight: inherit;
