--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -15,6 +15,7 @@
   max-width: 420px;
   width: 100%;
   padding: 20px;
+  font-weight: 700;
   background-color: #e3e3ee;
   border-radius: 12px;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
