--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,13 +1,39 @@
-.title {
-  margin-bottom: 20px;
-}
-
 .form {
-  width: 320px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .label {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 20px;
+  display: block;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.input {
+  display: block;
+  width: 50%;
+  padding: 5px 10px;
+  font-size: 16px;
+  font-weight: inherit;
+  font-family: inherit;
+  color: inherit;
+  border: 1px solid #34345664;
+  border-radius: 12px;
+}
+
+.button {
+  display: block;
+  padding: 10px;
+  width: 120px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #e3e3ee;
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: #383848;
+  border-radius: 12px;
+  border: none;
 }
