--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -8,6 +8,23 @@
 }
 
 .name {
+  font-size: 18px;
   font-weight: 700;
+  line-height: 1.5;
   margin-right: 12px;
+}
+
+.button {
+  display: block;
+  width: 90px;
+  padding: 10px 10px;
+  font-size: 16px;
+  font-weight: 700;
+  color: #e3e3ee;
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: #383848;
+  border-radius: 12px;
+  border: none;
 }
