--- a/src/pages/Contacts.module.css
+++ b/src/pages/Contacts.module.css
@@ -1,9 +1,8 @@
 .section {
   max-width: 500px;
   padding: 40px 20px;
-  margin: 0 auto;
+  margin: 20px auto;
   font-weight: 700;
-  color: #383848;
   background-color: #e3e3ee;
   border: 1px solid #34345628;
   box-shadow: 0px 1px 1px #00000024, 0px 1px 3px #0000001f,
