--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -37,4 +37,10 @@
   background-color: #383848;
   border-radius: 12px;
   border: none;
+  transition: box-shadow 0.1s, transform 0.1s;
+}
+
+.button:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02);
 }
