--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -2,5 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px;
+  background-color: #383848;
+  color: #e3e3ee;
   border-bottom: 2px solid #34345628;
 }
