--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -10,7 +10,7 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 1.5;
-  color: #383848;
+  color: #e3e3ee;
   transition: transform 0.1s;
 }
 
