--- a/src/components/RegisterForm/RegisterForm.module.css
+++ b/src/components/RegisterForm/RegisterForm.module.css
@@ -13,7 +13,8 @@
 
 .input {
   display: block;
-  width: 50%;
+  width: 30%;
+  min-width: 450px;
   padding: 5px 10px;
   font-size: 16px;
   font-weight: inherit;
