--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -20,11 +20,11 @@
   padding: 10px;
   font-size: 16px;
   font-weight: 700;
-  color: #e3e3ee;
+  color: #383848;
   text-align: center;
   text-transform: uppercase;
   cursor: pointer;
-  background-color: #383848;
+  background-color: #e3e3ee;
   border-radius: 12px;
   border: none;
   transition: box-shadow 0.1s, transform 0.1s;
