--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,18 +2,20 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 20px 20px;
+  padding: 20px;
 }
 
 .label {
   display: block;
   font-size: 18px;
   line-height: 1.5;
+  margin: 0 auto;
+  max-width: 80%;
 }
 
 .input {
   display: block;
-  width: 95%;
+  min-width: 400px;
   padding: 5px 10px;
   font-size: 16px;
   font-weight: inherit;
