--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -2,10 +2,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-transform: uppercase;
   gap: 10px;
   padding: 5px 5px;
-  border: 1px solid #34345636;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
+  transition: transform 0.1s;
+}
+
+.item:hover {
+  transform: scale(1.02);
 }
 
 .buttons {
