--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -1,17 +1,20 @@
 .wrapper {
-  display: block;
-  padding: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
 
 .label {
   display: block;
   font-size: 18px;
   line-height: 1.5;
+  margin: 0 auto;
+  max-width: 80%;
 }
 
 .input {
   display: block;
-  width: 95%;
+  min-width: 400px;
   padding: 5px 10px;
   font-size: 16px;
   font-weight: inherit;
