--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   text-transform: uppercase;
   gap: 10px;
-  padding: 5px 5px;
+  padding: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
   transition: transform 0.1s;
