--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -12,11 +12,20 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  max-width: 420px;
+  max-width: 570px;
+  padding: 60px 0 40px;
   width: 100%;
-  padding: 20px;
   font-weight: 700;
-  background-color: #e3e3ee;
+  background-image: linear-gradient(
+      to bottom,
+      rgb(210, 200, 200, 0.9),
+      rgb(215, 200, 200, 0.4)
+    ),
+    url(../../img/background/modal.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   border-radius: 12px;
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
