--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -3,5 +3,11 @@
   flex-direction: column;
   gap: 10px;
   padding: 20px;
-  width: 50%;
+  /* width: 50%; */
+}
+
+@media only screen and (min-width: 1200px) {
+  .wrapper {
+    width: 50%;
+  }
 }
