--- a/src/pages/Contacts.module.css
+++ b/src/pages/Contacts.module.css
@@ -20,8 +20,17 @@
   justify-content: center;
 }
 
-.service {
-  width: 50%;
+@media only screen and (max-width: 1199px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .service {
+    width: 50%;
+  }
 }
 
 .title {
