--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,7 +23,7 @@ body {
     sans-serif;
   box-sizing: border-box;
   color: #383848;
-  background-color: #eaeaef;
+  background-color: #d2c8c8e6;
 }
 
 code {
